# tapo-csharp

./: .gitignore  CLAUDE.md  README.md  TapoCSharp.sln
Setup/: Package.wxs  Setup.wixproj
TapoCSharp/: ApiClient.cs  KlapProtocolHandler.cs  PassthroughProtocolHandler.cs  PowerStripHandler.cs  TapoProtocol.cs
TapoCSharp.Cli/: Program.cs  TapoCSharp.Cli.csproj
TapoCSharp.Cli/Commands/: AuthCommand.cs  DevicesCommand.cs  OffCommand.cs  OnCommand.cs  StatusCommand.cs
TapoCSharp.Cli/Services/: DeviceService.cs  NetworkScanService.cs
TapoCSharp.Cli/Settings/: DeviceCommandSettings.cs
TapoCSharp.Example/: Program.cs  TapoCSharp.Example.csproj
gnome-extension/tapo@martinalderson.com/: extension.js  metadata.json  stylesheet.css
tapo-cli/: Cargo.toml
tapo-cli/src/: creds.rs  main.rs  ops.rs  store.rs
