[package]
name = "tapo-cli"
version = "0.1.0"
edition = "2021"
description = "CLI to discover and control TP-Link Tapo devices on the local network"
license = "MIT"

[[bin]]
name = "tapo"
path = "src/main.rs"

[dependencies]
tapo = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
anyhow = "1"
dirs = "5"
futures = "0.3"
rpassword = "7"

[profile.release]
strip = true
lto = true
